--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * rustlambda
 A lambda calculus parser and evaluator written in rust
-* TODO
-** [ ] tests pls
-** [ ] linear optimnization
-** [ ] lazier strategy? call by need?
-** [ ] do names already
+** TODO
+- [ ] tests pls
+- [ ] linear optimnization
+- [ ] lazier strategy? call by need?
+- [ ] do names already
 |---------------------+----------------------+-------------+--------|
 | Strategy            | Speed                | Lines       | Fails? |
 |---------------------+----------------------+-------------+--------|
@@ -13,7 +13,7 @@ A lambda calculus parser and evaluator written in rust
 | Call by need - lazy | Better               | a bit worse | no     |
 | Interaction nets    | fast as fuck boiiiii | yikes       | yees   |
 |---------------------+----------------------+-------------+--------|
-** [X] stats
-** [X] fix parsing
-** [X] is empty_box worth it?
-yes
+- [X] stats
+- [X] fix parsing
+- [X] is empty_box worth it?
+    yes
