--- a/README.org
+++ b/README.org
@@ -1,24 +1,15 @@
 * rustlambda
-A lambda calculus parser and evaluator written in rust
+A parser and evaluator for the lambda calculus written in Rust
 ** Goals
-- [-] a functioning repl
-- [ ] lazier strategy? call by need?
-- [ ] not reducing from the root every time
-- [ ] tests pls
-- [ ] unicode
-- [ ] semicolons -> newlines and indentation based definitions
-- [ ] print refactor
-|---------------------+--------------------+-------------+--------|
-| Strategy            | Speed              | Lines       | Fails? |
-|---------------------+--------------------+-------------+--------|
-| Applicative order   | Good               | not bad     | yes    |
-| Normal order        | Worse              | not bad     | no     |
-| Call by need - lazy | Better             | a bit worse | no     |
-| Interaction nets    | weeeeeeeeeeeeeeeee | yikes       | yees   |
-|---------------------+--------------------+-------------+--------|
-- [X] linear optimnization
-- [X] do names already
-- [X] stats
-- [X] fix parsing
-- [X] is empty_box worth it?
-    yes
+- [-] A functioning repl
+- [-] Tests
+- [ ] Lazier strategy?
+- [ ] Not reducing from the root every time
+- [ ] Better parser
+  - [ ] Semicolons -> Newlines, indentation based definitions
+  - [ ] Unicode support
+- [X] Print refactor
+- [X] Linear optimnization
+- [X] Do names already
+- [X] Stats
+- [X] Fix parsing
